<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xxx"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="364dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:text="Приложение для складского учета"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="193dp"
        android:layout_height="163dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/dd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button5"
            android:layout_width="98dp"
            android:layout_height="54dp"
            android:backgroundTint="@color/blue2"
            android:onClick="onClickToActivityReport"
            android:text="@string/textReport"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="331dp"
        android:layout_height="157dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/dd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button3"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_weight="2"
            android:backgroundTint="@color/blue2"
            android:onClick="onClickToActivityDoc1"
            android:text="@string/enrollment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button4"
            android:layout_width="126dp"
            android:layout_height="54dp"
            android:layout_marginTop="52dp"
            android:onClick="onClickToActivityDoc2"
            android:text="@string/off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.724"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="356dp"
        android:layout_height="177dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/dd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.725"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button"
            android:layout_width="191dp"
            android:layout_height="52dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/blue2"
            android:onClick="onClickToActivityWare"
            android:text="@string/nomenclature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="179dp"
            android:layout_height="52dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClickToActivityUnit"
            android:text="@string/unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="55dp"
        android:layout_height="52dp"

        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@drawable/file_text" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/statistics" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"

        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/news" />


</androidx.constraintlayout.widget.ConstraintLayout>