<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".AddUnit">


    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue">

        <TextView
            android:layout_width="267dp"
            android:layout_height="46dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:text="@string/unit"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/blue"
            android:contentDescription="@string/add"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="onClickHome"
            app:srcCompat="@drawable/arrow_back" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_unit"
        android:layout_width="338dp"
        android:layout_height="400dp"
        android:layout_above="@id/bottom_menu"
        android:layout_below="@id/upper_bg"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        />

    <SearchView
        android:id="@+id/search_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="65dp"
        android:searchIcon="@drawable/ic_baseline_search_24"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:orientation="horizontal">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/add_unit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp">

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btAddUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/add"
            android:onClick="onClickSaveNewUnit"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <EditText
            android:id="@+id/etForInputUnit"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_unit"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </FrameLayout>


</RelativeLayout>
